#2 Add initial front-end project skeleton.
Co-authored-by: Gareth gareth.williams987@gmail.com

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
@@ -75,19 +72,6 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and *not* Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
-
 # vuepress build output
 .vuepress/dist
 
@@ -102,3 +86,23 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Frontend app 
+
+# Logs
+npm-debug.log*
+
+# dependencies
+/app/node_modules
+/app/.pnp
+/app/.pnp.js
+
+# testing
+/app/coverage
+
+# production
+/app/build
+
+# misc
+.DS_Store
+
