[#3] Run NPM build as part of pipeline.
[@gazeddyw / @aiwatko / @jfgreen / @peersmg / @dsobkow]

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,5 +17,8 @@ jobs:
         run: npm install
         working-directory: ${{env.APP_DIR}}
       - name: Run tests
-        working-directory: ${{env.APP_DIR}}
         run: npm test
+        working-directory: ${{env.APP_DIR}}
+      - name: Build production bundle
+        run: npm run build
+        working-directory: ${{env.APP_DIR}}
