[#3] Configure firebase deploy and remove superfluous config values.
The only configuration option we currently need is the project ID

[@gazeddyw / @aiwatko / @jfgreen / @peersmg / @dsobkow]

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ typings/
 
 # Logs
 npm-debug.log*
+firebase-debug.log*
 
 # dependencies
 /app/node_modules
@@ -102,6 +103,12 @@ npm-debug.log*
 
 # production
 /app/build
+
+# Firebase cache
+.firebase/
+
+# Firebase config
+.firebaserc
 
 # misc
 .DS_Store
