--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,5 +20,12 @@ jobs:
         run: npm test
         working-directory: ${{env.APP_DIR}}
       - name: Build production bundle
+        env:
+          REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID_DEV}}
         run: npm run build
         working-directory: ${{env.APP_DIR}}
+      - name: Deploy to firebase
+        run: |
+          sudo npm install -g firebase-tools
+          firebase use ${{secrets.FIREBASE_PROJECT_ID_DEV}}
+          firebase deploy --token ${{secrets.FIREBASE_TOKEN}}
