--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,8 +25,10 @@ jobs:
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
+        env:
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
           sudo npm install -g firebase-tools
           firebase use ${{secrets.FIREBASE_PROJECT_ID_DEV}}
-          firebase deploy --token ${{secrets.FIREBASE_TOKEN}}
+          firebase deploy
