--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,11 @@
     "eject": "react-scripts eject",
     "format": "prettier --write src/"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && npm test -- --watchAll=false"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -36,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^4.2.5",
     "prettier": "^2.0.5"
   }
 }
