--- a/app/package.json
+++ b/app/package.json
@@ -18,11 +18,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "format-check": "prettier --check src/"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format && npm test -- --watchAll=false"
+      "pre-commit": "npm run format-check && npm test -- --watchAll=false"
     }
   },
   "eslintConfig": {
