--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -61,6 +61,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sivsubra-tw",
+      "name": "Siva Subramanian",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/55848659?v=4",
+      "profile": "https://github.com/sivsubra-tw",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
