docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,10 +81,10 @@
       ]
     },
     {
-      "login": "rahul",
-      "name": "Rahul Sarika",
-      "avatar_url": "https://avatars3.githubusercontent.com/u/858220?v=4",
-      "profile": "https://github.com/rahul",
+      "login": "rahul-rakshit",
+      "name": "Rahul Rakshit",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/36737963?v=4",
+      "profile": "https://github.com/rahul-rakshit",
       "contributions": [
         "code"
       ]
