--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,9 @@
     "build": "react-scripts build",
     "test": "TZ=UTC react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/",
-    "format-check": "prettier --check src/"
+    "format": "prettier --write 'src/' 'firestore/'",
+    "format-check": "prettier --check 'src/' 'firestore/'",
+    "test-firestore": "firebase emulators:exec --only firestore 'jest firestore/'"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -25,7 +26,8 @@
   },
   "devDependencies": {
     "husky": "^4.2.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "@firebase/testing": "^0.15.0"
   },
   "husky": {
     "hooks": {
