[#16] Add path to firebase rule.
[@aiwatko / @peersmg]

--- a/app/firebase.json
+++ b/app/firebase.json
@@ -10,7 +10,7 @@
     ]
   },
   "firestore": {
-    "rules": "firestore.rules"
+    "rules": "firestore/firestore.rules"
   },
   "emulators": {
     "firestore": {
