--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,9 @@ jobs:
         run: npm run test-firestore
       - name: Build production bundle
         env:
-          REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID_DEV}}
+          REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
+          REACT_APP_API_KEY: ${{secrets.FIREBASE_API_KEY}}
+          REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
@@ -34,5 +36,5 @@ jobs:
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
-          firebase use ${{secrets.FIREBASE_PROJECT_ID_DEV}}
+          firebase use ${{secrets.FIREBASE_PROJECT_ID}}
           firebase deploy
