[#22] Refactor script to export data

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,8 @@
   "description": "BMMRO scripts",
   "main": "export-data.js",
   "scripts": {
-    "test": "firebase emulators:exec --only firestore 'jest'"
+    "test": "firebase emulators:exec --only firestore 'jest'",
+    "export-data": "node ./exportData"
   },
   "author": "",
   "license": "ISC",
