--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,8 +4,8 @@
   "description": "BMMRO scripts",
   "main": "export-data.js",
   "scripts": {
-    "test": "firebase emulators:exec --only firestore 'jest ./src/_queryDataByTimeInterval.test.js'",
-    "export-data": "node ./exportData"
+    "start": "node ./index.js",
+    "test": "firebase emulators:exec --only firestore 'jest ./src'"
   },
   "author": "",
   "license": "ISC",
