--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,10 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       APP_DIR: ./app
+      SCRIPTS_DIR: ./scripts
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - name: Install dependencies
+      - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
           npm install
@@ -24,6 +25,14 @@ jobs:
       - name: Run firestore tests
         working-directory: ${{env.APP_DIR}}
         run: npm run test-firestore
+      - name: Install script dependencies
+        working-directory: ${{env.SCRIPTS_DIR}}
+        run: |
+          npm install
+          sudo npm install -g firebase-tools
+      - name: Run scripts tests
+        working-directory: ${{env.SCRIPTS_DIR}}
+        run: npm test
       - name: Build production bundle
         env:
           REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
