--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -1,9 +1,9 @@
-name: Deployment to dev environment
+name: Deployment to UAT environment
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - "uat-pending-*"
 
 jobs:
   build-test-deploy:
@@ -35,9 +35,9 @@ jobs:
         run: npm test
       - name: Build production bundle
         env:
-          REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_PROJECT_ID}}
-          REACT_APP_API_KEY: ${{secrets.FIREBASE_API_KEY}}
-          REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_AUTH_DOMAIN}}
+          REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_UAT_PROJECT_ID}}
+          REACT_APP_API_KEY: ${{secrets.FIREBASE_UAT_API_KEY}}
+          REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
@@ -45,14 +45,15 @@ jobs:
           FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
-          firebase use ${{secrets.FIREBASE_PROJECT_ID}}
+          firebase use ${{secrets.FIREBASE_UAT_PROJECT_ID}}
           firebase deploy
-      - name: Create dev-deployed-* tag
-        env:
-          COMMIT_SHA: ${{ github.sha }}
+      - name: Update uat-pending-* tag to uat-deployed-*
         run: |
           git fetch origin --tags -q
-          VERSION=$(git describe --tags --match "dev-deployed-*" $(git rev-list --tags="dev-deployed-*" --max-count=1) | sed 's/[^0-9]*//g')
-          TAG="dev-deployed-$((VERSION+1))"
-          git tag $TAG $COMMIT_SHA
+          PENDING_TAG=$(git describe --tags --match "uat-pending-*" $(git rev-list --tags="uat-pending-*" --max-count=1))
+          echo $PENDING_TAG
+          VERSION=$(echo $PENDING_TAG | sed 's/[^0-9]*//g')
+          TAG="uat-deployed-$VERSION"
+          git tag $TAG $PENDING_TAG
           git push origin $TAG
+          git push origin --delete $PENDING_TAG
