[#60] Force creating and pushing existing tag.
[@rahul-rakshit / @flaviarodriguesf / @peersmg / @dsobkow]

--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -53,6 +53,6 @@ jobs:
           PENDING_TAG=$(git describe --tags --match "uat-pending-*" $(git rev-list --tags="uat-pending-*" --max-count=1))
           VERSION=$(echo $PENDING_TAG | sed 's/[^0-9]*//g')
           TAG="uat-deployed-$VERSION"
-          git tag $TAG $PENDING_TAG
-          git push origin $TAG
+          git tag $TAG $PENDING_TAG -f
+          git push origin $TAG -f
           git push origin --delete $PENDING_TAG
