--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -53,6 +53,6 @@ jobs:
           PENDING_TAG=$(git describe --tags --match "prod-pending-*" $(git rev-list --tags="prod-pending-*" --max-count=1))
           VERSION=$(echo $PENDING_TAG | sed 's/[^0-9]*//g')
           TAG="prod-deployed-$VERSION"
-          git tag $TAG $PENDING_TAG
-          git push origin $TAG
+          git tag $TAG $PENDING_TAG -f
+          git push origin $TAG -f
           git push origin --delete $PENDING_TAG
