--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "firebase": "^7.14.6",
     "formik": "^2.1.4",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
