--- a/app/package.json
+++ b/app/package.json
@@ -13,21 +13,21 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
-    "@reach/router": "^1.3.3",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "date-fns": "^2.14.0",
-    "firebase": "^7.14.6",
-    "formik": "^2.1.4",
+    "date-fns": "^2.15.0",
+    "firebase": "^7.16.1",
+    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
+    "@firebase/testing": "^0.20.7",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "@firebase/testing": "^0.15.0"
+    "prettier": "^2.0.5"
   },
   "husky": {
     "hooks": {
