--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@reach/alert-dialog": "^0.10.5",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
