--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.0.12",
     "date-fns": "^2.15.0",
     "firebase": "^7.16.1",
     "formik": "^2.1.5",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@firebase/testing": "^0.20.7",
     "husky": "^4.2.5",
+    "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.0.5"
   },
   "husky": {
