[#72] Implement readDocById on datastore class.
This is part of a refactor to decouple datastore methods from collection
names.

[@rahul-rakshit / @peersmg]

--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format-check && npm test -- --watchAll=false"
+      "pre-commit": "npm run format-check && CI=true npm test"
     }
   },
   "eslintConfig": {
