--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
