[#93] Run export tests in series.
[@rahul-rakshit / @dsobkow]

--- a/export-script/package.json
+++ b/export-script/package.json
@@ -5,7 +5,7 @@
   "main": "export-data.js",
   "scripts": {
     "start": "node ./index.js",
-    "test": "firebase emulators:exec --only firestore 'jest ./src'"
+    "test": "firebase emulators:exec --only firestore 'jest ./src --runInBand'"
   },
   "author": "",
   "license": "ISC",
