--- a/export-script/package.json
+++ b/export-script/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^6.0.0",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.16.1",
