[#93] Add indexes to the firebase config.
[@rahul-rakshit / @dsobkow]

--- a/app/firebase.json
+++ b/app/firebase.json
@@ -1,7 +1,11 @@
 {
   "hosting": {
     "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
@@ -10,7 +14,8 @@
     ]
   },
   "firestore": {
-    "rules": "firestore/firestore.rules"
+    "rules": "firestore/firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "emulators": {
     "firestore": {
