--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,7 +11,6 @@ jobs:
     env:
       APP_DIR: ./app
       EXPORT_SCRIPT_DIR: ./export-script
-      PREVIOUS_VERSION: $(git describe --tags --match "dev-deployed-*" $(git rev-list --tags="dev-deployed-*" --max-count=1) | sed 's/[^0-9]*//g')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -22,6 +21,10 @@ jobs:
         run: |
           npm install
           sudo npm install -g firebase-tools
+      - name: Set environment variable with new version
+        run: |
+          PREVIOUS_VERSION=$(git fetch origin --tags -q && git describe --tags --match "dev-deployed-*" $(git rev-list --tags="dev-deployed-*" --max-count=1) | sed 's/[^0-9]*//g')
+          echo "::set-env name=NEW_VERSION::$(($PREVIOUS_VERSION+1))"
       - name: Run frontend tests
         working-directory: ${{env.APP_DIR}}
         run: npm test
@@ -41,7 +44,7 @@ jobs:
           REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_DEV_PROJECT_ID}}
           REACT_APP_API_KEY: ${{secrets.FIREBASE_DEV_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
-          REACT_APP_VERSION: "$((${{env.PREVIOUS_VERSION}}+1))"
+          REACT_APP_VERSION: ${{env.NEW_VERSION}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
