--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -35,11 +35,17 @@ jobs:
       - name: Run export script tests
         working-directory: ${{env.EXPORT_SCRIPT_DIR}}
         run: npm test
+      - name: Set environment variable with new version
+        run: |
+          PENDING_TAG=$(git fetch origin --tags -q && git describe --tags --match "uat-pending-*" $(git rev-list --tags="uat-pending-*" --max-count=1))
+          PENDING_TAG_VERSION=$(echo $PENDING_TAG | sed 's/[^0-9]*//g')
+          echo "::set-env name=NEW_VERSION::$PENDING_TAG_VERSION"
       - name: Build production bundle
         env:
           REACT_APP_PROJECT_ID: ${{secrets.FIREBASE_UAT_PROJECT_ID}}
           REACT_APP_API_KEY: ${{secrets.FIREBASE_UAT_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
+          REACT_APP_VERSION: ${{env.NEW_VERSION}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
