[#103] Add tests for useEncountersByMonth.
This commit also adds two new dev dependencies:

- @testing-library/react-hooks
- react-test-renderer

React hooks testing library is a more sophisticated solution to testing
hooks. `react-test-renderer` is a peer dependency.

The hook now returns an object rather than a tuple.

[@rahul-rakshit]

--- a/app/package.json
+++ b/app/package.json
@@ -29,9 +29,11 @@
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.7",
+    "@testing-library/react-hooks": "^3.4.1",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-test-renderer": "^16.13.1"
   },
   "husky": {
     "hooks": {
