--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,7 +23,7 @@ jobs:
           sudo npm install -g firebase-tools
       - name: Run frontend tests
         working-directory: ${{env.APP_DIR}}
-        run: npm test
+        run: npm run test-ci
       - name: Run firestore tests
         working-directory: ${{env.APP_DIR}}
         run: npm run test-firestore
