--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test'",
+    "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'react-scripts test --runInBand'",
     "eject": "react-scripts eject",
     "format": "prettier --write 'src/' 'firestore/'",
     "format-check": "prettier --check 'src/' 'firestore/'",
