--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format-check && CI=true npm test"
+      "pre-commit": "npm run format-check && npm run test-ci"
     }
   },
   "eslintConfig": {
