--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@firebase/testing": "^0.20.7",
     "@testing-library/react-hooks": "^3.4.1",
+    "firebase-tools": "^8.10.0",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.0.5",
