--- a/export-script/package.json
+++ b/export-script/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.7",
+    "firebase-tools": "^8.10.0",
     "jest": "^25.0.0"
   }
 }
