--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -11,6 +11,7 @@ jobs:
     env:
       APP_DIR: ./app
       EXPORT_SCRIPT_DIR: ./export-script
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
