--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,7 @@
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.12",
     "date-fns": "^2.15.0",
-    "firebase": "^7.16.1",
+    "firebase": "^7.24.0",
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -34,7 +34,7 @@
     "firebase-tools": "^8.10.0",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
-    "prettier": "^2.0.5",
+    "prettier": "2.5.1",
     "react-test-renderer": "^16.13.1"
   },
   "husky": {
