--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,9 +2,11 @@ name: Deployment to dev environment
 
 on:
   push:
-  pull_request:
     branches:
       - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build-test-deploy:
