--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,7 +14,6 @@ jobs:
     env:
       APP_DIR: ./app
       EXPORT_SCRIPT_DIR: ./export-script
-      E2E_TESTS_DIR: ./e2e-tests
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -56,10 +55,32 @@ jobs:
         run: |
           npx firebase use ${{secrets.FIREBASE_DEV_PROJECT_ID}}
           npx firebase deploy
+      - name: Create dev-deployed-* tag
+        env:
+          COMMIT_SHA: ${{ github.sha }}
+        run: |
+          TAG="dev-deployed-${{env.NEW_VERSION}}"
+          git fetch --unshallow origin
+          git tag $TAG $COMMIT_SHA
+          git push origin $TAG
+  end-to-end:
+    runs-on: macos-latest
+    env:
+      E2E_TESTS_DIR: ./e2e-tests
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
       - name: Install e2e-tests dependencies
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: |
           npm install
+      - name: Install safari driver
+        working-directory: ${{env.E2E_TESTS_DIR}}
+        run: |
+          sudo safaridriver --enable
+          safaridriver -p 0 &
       - name: Run end to end tests
         env:
           ENDPOINT: ${{secrets.FIREBASE_DEV_ENDPOINT}}
@@ -70,11 +91,3 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: node --experimental-vm-modules node_modules/jest/bin/jest.js
-      - name: Create dev-deployed-* tag
-        env:
-          COMMIT_SHA: ${{ github.sha }}
-        run: |
-          TAG="dev-deployed-${{env.NEW_VERSION}}"
-          git fetch --unshallow origin
-          git tag $TAG $COMMIT_SHA
-          git push origin $TAG
