[#247] stop dev-pr from running on master

--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -1,9 +1,6 @@
-name: Deployment to dev environment
+name: Build Test Bundle in Dev
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
     branches:
     - master
