[#247] create dependency between build-test-deploy and end-to-end jobs

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -61,6 +61,7 @@ jobs:
           git tag $TAG $COMMIT_SHA
           git push origin $TAG
   end-to-end:
+    needs: build-test-deploy
     runs-on: macos-latest
     env:
       E2E_TESTS_DIR: ./e2e-tests
