--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-    - master
 
 jobs:
   build-test-deploy:
@@ -63,3 +60,33 @@ jobs:
           git fetch --unshallow origin
           git tag $TAG $COMMIT_SHA
           git push origin $TAG
+  end-to-end:
+    needs: build-test-deploy
+    runs-on: macos-latest
+    env:
+      E2E_TESTS_DIR: ./e2e-tests
+      ENDPOINT: https://bmmro-164ec.web.app
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install e2e-tests dependencies
+        working-directory: ${{env.E2E_TESTS_DIR}}
+        run: |
+          npm install
+      - name: Install safari driver
+        working-directory: ${{env.E2E_TESTS_DIR}}
+        run: |
+          sudo safaridriver --enable
+          safaridriver -p 0 &
+      - name: Run end to end tests
+        env:
+          ENDPOINT: ${{env.ENDPOINT}}
+          EMAIL: "test@test.com"
+          PASSWORD: ${{secrets.FIREBASE_DEV_TEST_ACCOUNT_PASSWORD}}
+          PROJECT_ID: ${{secrets.FIREBASE_DEV_PROJECT_ID}}
+          API_KEY: ${{secrets.FIREBASE_DEV_API_KEY}}
+          AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
+        working-directory: ${{env.E2E_TESTS_DIR}}
+        run: node --experimental-vm-modules node_modules/jest/bin/jest.js
