--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -2,6 +2,9 @@ name: Build Test Bundle in Dev
 
 on:
   pull_request:
+    branches:
+      - master
+
 jobs:
   build-test-bundle:
     runs-on: ubuntu-latest
