--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -45,5 +45,6 @@ jobs:
           REACT_APP_API_KEY: ${{secrets.FIREBASE_DEV_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
           REACT_APP_VERSION: ${{env.NEW_VERSION}}
+          BIOPSY_FORM_FEATURE_TOGGLE: ${{secrets.BIOPSY_FORM_FEATURE_TOGGLE_DEV}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
