--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -45,6 +45,7 @@ jobs:
           REACT_APP_API_KEY: ${{secrets.FIREBASE_PROD_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_PROD_AUTH_DOMAIN}}
           REACT_APP_VERSION: ${{env.NEW_VERSION}}
+          BIOPSY_FORM_FEATURE_TOGGLE: ${{secrets.BIOPSY_FORM_FEATURE_TOGGLE_PROD}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
