--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -45,6 +45,7 @@ jobs:
           REACT_APP_API_KEY: ${{secrets.FIREBASE_UAT_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
           REACT_APP_VERSION: ${{env.NEW_VERSION}}
+          BIOPSY_FORM_FEATURE_TOGGLE: ${{secrets.BIOPSY_FORM_FEATURE_TOGGLE_UAT}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
