--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
-.env*
+app/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
