--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -12,10 +12,10 @@ jobs:
       APP_DIR: ./app
       EXPORT_SCRIPT_DIR: ./export-script
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: "12"
+          node-version: "16"
       - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
@@ -49,7 +49,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN_NEW}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_UAT_PROJECT_ID}}
@@ -67,10 +67,10 @@ jobs:
       E2E_TESTS_DIR: ./e2e-tests
       ENDPOINT: https://bmmro-uat.web.app
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 16
       - name: Install e2e-tests dependencies
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: |
