--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,10 +12,10 @@ jobs:
       APP_DIR: ./app
       EXPORT_SCRIPT_DIR: ./export-script
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: "12"
+          node-version: "16"
       - name: Install app dependencies
         working-directory: ${{env.APP_DIR}}
         run: |
@@ -49,7 +49,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN_NEW}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_PROD_PROJECT_ID}}
