RS/AD Use the correct firebase token secret name. Update readme.

--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN_NEW}}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_UAT_PROJECT_ID}}
