--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,7 @@ name: Backup database
 
 on:
   schedule:
-    - cron:  '0 15 * * *'
+    - cron:  '1/15 * * * *'
 
 env:
   PROJECT_ID: ${{secrets.FIREBASE_DEV_PROJECT_ID}}
