Modify backup schedule to test

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,9 +12,9 @@ jobs:
   backup:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/setup-gcloud@main
+      - uses: google-github-actions/setup-gcloud@v1
         with:
-          service_account_key: ${{ secrets.BACKUP_KEY }}
+          credentials_json: ${{ secrets.BACKUP_KEY }}
           export_default_credentials: true
       - run: gcloud info
       - run: gcloud config set project $PROJECT_ID
