--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -45,6 +45,7 @@ jobs:
           REACT_APP_API_KEY: ${{secrets.FIREBASE_UAT_API_KEY}}
           REACT_APP_AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
           REACT_APP_VERSION: ${{env.NEW_VERSION}}
+          REACT_APP_ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE: ${{secrets.ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE_UAT}}
         working-directory: ${{env.APP_DIR}}
         run: npm run build
       - name: Deploy to firebase
@@ -88,5 +89,6 @@ jobs:
           PROJECT_ID: ${{secrets.FIREBASE_UAT_PROJECT_ID}}
           API_KEY: ${{secrets.FIREBASE_UAT_API_KEY}}
           AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
+          REACT_APP_ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE: ${{secrets.ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE_UAT}}
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: node --experimental-vm-modules node_modules/jest/bin/jest.js
