Pointed the backup bucket to prod

--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -5,8 +5,8 @@ on:
     - cron:  '15 4 * * *'
 
 env:          
-  PROJECT_ID: ${{secrets.FIREBASE_DEV_PROJECT_ID}}
-  BUCKET: gs://${{secrets.BUCKET_DEV}}
+  PROJECT_ID: ${{secrets.FIREBASE_PROD_PROJECT_ID}}
+  BUCKET: gs://${{secrets.BACKUP_BUCKET_PROD}}
 
 jobs:
   backup:
