--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -93,5 +93,5 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
           REACT_APP_ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE: ${{secrets.ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE_DEV}}
         working-directory: ${{env.E2E_TESTS_DIR}}
-        run: node --experimental-vm-modules node_modules/jest/bin/jest.js
+        run: node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand
         
