--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -64,7 +64,7 @@ jobs:
           git push origin $TAG
   end-to-end:
     needs: build-test-deploy
-    runs-on: macos-12.6.5
+    runs-on: macos-latest
     env:
       E2E_TESTS_DIR: ./e2e-tests
       ENDPOINT: https://bmmro-164ec.web.app
@@ -92,5 +92,5 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
           REACT_APP_ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE: ${{secrets.ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE_DEV}}
         working-directory: ${{env.E2E_TESTS_DIR}}
-        run: node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand
+        run: npm run test
         
