--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -64,7 +64,7 @@ jobs:
           git push origin $TAG
   end-to-end:
     needs: build-test-deploy
-    runs-on: macos-latest
+    runs-on: macos-13
     env:
       E2E_TESTS_DIR: ./e2e-tests
       ENDPOINT: https://bmmro-164ec.web.app
