--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -63,7 +63,7 @@ jobs:
           git push origin --delete ${{env.PENDING_TAG}}
   end-to-end:
     needs: build-test-deploy
-    runs-on: macos-latest
+    runs-on: macos-13
     env:
       E2E_TESTS_DIR: ./e2e-tests
       ENDPOINT: https://bmmro-uat.web.app
@@ -91,4 +91,4 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_UAT_AUTH_DOMAIN}}
           REACT_APP_ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE: ${{secrets.ENCOUNTERS_BY_MONTH_DROPDOWN_FEATURE_TOGGLE_UAT}}
         working-directory: ${{env.E2E_TESTS_DIR}}
-        run: node --experimental-vm-modules node_modules/jest/bin/jest.js
+        run: npm run test
