--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm test
       - name: Set environment variable with new version
         run: |
-          PENDING_TAG=$(git fetch origin --tags -q && git describe --tags --match "uat-pending-*" $(git rev-list --tags="uat-pending-*" --max-count=1))
+          PENDING_TAG=$(git fetch origin --tags -q && git tag -l | grep "uat-pending-*" | sort -V | tail -1)
           echo "PENDING_TAG=$PENDING_TAG" >> $GITHUB_ENV
           PENDING_TAG_VERSION=$(echo $PENDING_TAG | sed 's/[^0-9]*//g')
           echo "NEW_VERSION=$PENDING_TAG_VERSION" >> $GITHUB_ENV
