--- a/app/package.json
+++ b/app/package.json
@@ -17,9 +17,9 @@
     "@emotion/core": "^10.0.28",
     "@reach/alert-dialog": "^0.10.5",
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^5.11.1",
-    "@testing-library/react": "^10.4.7",
-    "@testing-library/user-event": "^12.0.12",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.15.0",
     "firebase": "^7.24.0",
     "formik": "^2.1.5",
@@ -27,11 +27,13 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@firebase/testing": "^0.20.7",
     "@testing-library/react-hooks": "^3.4.1",
+    "core-js": "^3.31.0",
     "firebase-tools": "^12.4.2",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
