--- a/app/package.json
+++ b/app/package.json
@@ -21,22 +21,22 @@
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.12",
     "date-fns": "^2.15.0",
-    "firebase": "^7.24.0",
+    "firebase": "^10.0.0",
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "3.4.4"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.7",
     "@testing-library/react-hooks": "^3.4.1",
     "firebase-tools": "^12.4.2",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.5.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "@firebase/rules-unit-testing": "^3.0.0"
   },
   "husky": {
     "hooks": {
