--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_DEV_PROJECT_ID}}
