--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test'",
-    "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'react-scripts test --runInBand'",
+    "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'jest test --env=jsdom --runInBand'",
     "test-nowatch": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test --watchAll=false'",
     "eject": "react-scripts eject",
     "format": "prettier --write 'src/' 'firestore/'",
@@ -14,7 +14,7 @@
     "test-firestore": "firebase emulators:exec --only firestore 'jest firestore/'"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.11.1",
     "@reach/alert-dialog": "^0.10.5",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -31,14 +31,18 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "@firebase/testing": "^0.20.7",
     "@testing-library/react-hooks": "^3.4.1",
+    "babel-jest": "^29.6.1",
     "core-js": "^3.31.0",
     "firebase-tools": "^12.4.2",
     "husky": "^4.2.5",
+    "jest": "^27.5.1",
     "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.5.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.14.0"
   },
   "husky": {
     "hooks": {
