[#455] Replacing Firebase Token
Reversed the secret to google app creds
Co-author: Paige Cox <paige.cox@thoughtworks.com>

--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -22,7 +22,7 @@ jobs:
           npm install
       - name: Run frontend tests
         env:
-          GCP_SA_KEY: ${{secrets.GCP_SA_KEY}}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         working-directory: ${{env.APP_DIR}}
         run: npm run test-ci
       - name: Run firestore tests
