455 replacing firebase token (#471)
* [#455] PC/VD Changed firebase_token to  google_app_creds

* [#455] PC/VD Changed firebase_token to gcp_sa_key

* [#455] Replacing Firebase Token

Reversed the secret to google app creds
Co-author: Paige Cox <paige.cox@thoughtworks.com>

* [#455] - replacing firebase token

Added authentication/ firebase login

Co-authored-by: Paige Cox <paige.cox@thoughtworks.com>

* [#455] - replacing firebase token

Corrected yaml entry for  authentication/ firebase login

Co-authored-by: Paige Cox <paige.cox@thoughtworks.com>

* [#455] - replacing firebase token

Corrected yaml entry for  authentication/ firebase login

Co-authored-by: Paige Cox <paige.cox@thoughtworks.com>

* [#455] - replacing firebase token

Corrected yaml entry for  authentication/ firebase login

Co-authored-by: Paige Cox <paige.cox@thoughtworks.com>

* [#655] - Replace firebase_token §

Corrected yaml entry for authentication / firebase login

§
longDescription (What: * Why: * How: * Side Effects: *)

---------

Co-authored-by: Paige Cox <paige.cox@thoughtworks.com>
Co-authored-by: paigecox <113363274+paigecox@users.noreply.github.com>

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,7 +52,7 @@ jobs:
         run: npm run build
       - name: Deploy to firebase
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
+          FIREBASE_TOKEN: ${{secrets.FIREBASE_TOKEN}}
         working-directory: ${{env.APP_DIR}}
         run: |
           npx firebase use ${{secrets.FIREBASE_DEV_PROJECT_ID}}
@@ -95,4 +95,3 @@ jobs:
           AUTH_DOMAIN: ${{secrets.FIREBASE_DEV_AUTH_DOMAIN}}
         working-directory: ${{env.E2E_TESTS_DIR}}
         run: npm run test
-
