Revert "455 replacing firebase token (#477)"
This reverts commit 8b5312a314d59683daf17c72aef66143d0d1b49b.

--- a/.github/workflows/dev-pr.yml
+++ b/.github/workflows/dev-pr.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           npm install
       - name: Run frontend tests
+        env:
+          GCP_SA_KEY: ${{secrets.GCP_SA_KEY}}
         working-directory: ${{env.APP_DIR}}
         run: npm run test-ci
       - name: Run firestore tests
