[#376] Import data from AccessDB to firebase
Exported data from AccessDB to JSON

Co-authored-by: rameezshafsad <rameez.shafsad@thoughtworks.com>

--- a/upload-script/package.json
+++ b/upload-script/package.json
@@ -4,5 +4,9 @@
   "dependencies": {
     "firebase-admin": "^11.9.0"
   },
-  "type":"module"
+  "type": "module",
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "jest": "^29.6.1"
+  }
 }
